[gd_scene load_steps=4 format=3 uid="uid://bwrmmci14rhu6"]

[ext_resource type="Script" path="res://util/clock.gd" id="1_kp3xb"]
[ext_resource type="FontFile" uid="uid://chqqcvfcsa8fu" path="res://fonts/shogunate/ShogunateAcademy-vm3lZ.otf" id="3_g2qh6"]
[ext_resource type="FontFile" uid="uid://c1mgwsb6wtd8q" path="res://fonts/shogunate/ShogunateCondensed-nRxWY.otf" id="4_lf8e6"]

[node name="Clock" type="Node2D"]
script = ExtResource("1_kp3xb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 168.0
offset_bottom = 54.0

[node name="TimerContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="DateLabel" type="Label" parent="VBoxContainer/TimerContainer"]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("3_g2qh6")
theme_override_font_sizes/font_size = 22
text = "2023-01-01
"

[node name="TimeLabel" type="Label" parent="VBoxContainer/TimerContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("3_g2qh6")
theme_override_font_sizes/font_size = 22
text = "00:00:00"
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_lf8e6")
text = "x"

[node name="x1SButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../x1MnButton")
theme_override_colors/font_color = Color(0.545098, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.545098, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_lf8e6")
theme_override_font_sizes/font_size = 18
text = "1 s"

[node name="x1MnButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../x1SButton")
focus_neighbor_right = NodePath("../x10MnButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_lf8e6")
theme_override_font_sizes/font_size = 18
text = "1 m"

[node name="x10MnButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../x1MnButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_lf8e6")
theme_override_font_sizes/font_size = 18
text = "10 m"

[node name="x1HButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../x1MnButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_lf8e6")
theme_override_font_sizes/font_size = 18
text = "1 h"

[node name="x1DButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../x1MnButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_lf8e6")
theme_override_font_sizes/font_size = 18
text = "1 d"

[connection signal="pressed" from="VBoxContainer/ButtonsContainer/x1SButton" to="." method="_on_x_1s_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/x1MnButton" to="." method="_on_x_1_mn_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/x10MnButton" to="." method="_on_x_10_mn_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/x1HButton" to="." method="_on_x_1h_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/x1DButton" to="." method="_on_x_1d_button_pressed"]
